# android_device_oneplus_oneplus3

./: .clang-format  Android.bp  Android.mk  AndroidProducts.mk  BoardConfig.mk  Makefile.am  README.md  android_filesystem_config.h  aosp_oneplus3.mk  board-info.txt  cm.dependencies  cm.mk  config.fs  configure.ac  device.mk  du_oneplus3.mk  extract-files.sh  gps_vendor_board.mk  lineage.dependencies  lineage.mk  lineage_oneplus3.mk  liosx_oneplus3.mk  project.config  proprietary-files-qc-perf.txt  proprietary-files-qc.txt  proprietary-files.txt  proprietary-firmware.txt  releasetools.py  setup-makefiles.sh  system.prop  tftp.mk  vendorsetup.sh
audio/mm-audio/: Makefile  Makefile.am  autogen.sh  configure.ac
audio/mm-audio/aenc-aac/: Android.mk  Makefile.am
audio/mm-audio/aenc-aac/qdsp6/: Android.mk  Makefile  Makefile.am
audio/mm-audio/aenc-amrnb/: Android.mk  Makefile
audio/mm-audio/aenc-amrnb/qdsp6/: Android.mk  Makefile
audio/mm-audio/aenc-evrc/: Android.mk
audio/mm-audio/aenc-evrc/qdsp6/: Android.mk  Makefile
audio/mm-audio/aenc-qcelp13/: Android.mk
audio/mm-audio/aenc-qcelp13/qdsp6/: Android.mk  Makefile
data-ipa-cfg-mgr/ipanat/src/: Android.mk  Makefile.am  ipa_nat_drv.c  ipa_nat_drvi.c
geofence/: Android.mk  GeofenceAdapter.cpp  Makefile.am  location_geofence.cpp
gps/: Android.mk  Makefile.am  configure.ac  gps_vendor_product.mk  loc-hal.pc.in
gps/android/: AGnss.cpp  AGnss.h  AGnssRil.cpp  AGnssRil.h  Android.mk  Gnss.cpp  Gnss.h  GnssBatching.cpp  GnssBatching.h  GnssConfiguration.cpp  GnssConfiguration.h  GnssDebug.cpp  GnssDebug.h  GnssGeofencing.cpp  GnssGeofencing.h  GnssMeasurement.cpp  GnssMeasurement.h  GnssNi.cpp  GnssNi.h  android.hardware.gnss@1.0-service-qti.rc  android.hardware.gnss@1.1-service-qti.rc  service.cpp
gps/android/1.0/: AGnssRil.cpp  Gnss.cpp  GnssConfiguration.h  GnssMeasurement.cpp  android.hardware.gnss@1.0-service-qti.rc  android.hardware.gnss@1.0-service-qti.xml  service.cpp
gps/android/1.0/location_api/: BatchingAPIClient.h  GnssAPIClient.cpp  GnssAPIClient.h  LocationUtil.cpp  LocationUtil.h  MeasurementAPIClient.cpp
gps/android/1.1/: AGnss.cpp  AGnss.h  AGnssRil.h  Android.mk  Gnss.cpp  GnssConfiguration.cpp  GnssGeofencing.cpp  android.hardware.gnss@1.1-service-qti.xml  service.cpp
gps/android/1.1/location_api/: BatchingAPIClient.cpp  BatchingAPIClient.h  GnssAPIClient.cpp  GnssAPIClient.h  LocationUtil.cpp  MeasurementAPIClient.cpp  MeasurementAPIClient.h
gps/android/2.0/: AGnss.cpp  AGnssRil.cpp  AGnssRil.h  Android.mk  Gnss.cpp  GnssBatching.cpp  GnssBatching.h  GnssDebug.cpp  GnssDebug.h  GnssMeasurement.cpp  GnssMeasurement.h  GnssNi.cpp  GnssNi.h
gps/android/2.0/location_api/: BatchingAPIClient.cpp  GeofenceAPIClient.cpp  GnssAPIClient.cpp  GnssAPIClient.h  LocationUtil.cpp  LocationUtil.h  MeasurementAPIClient.cpp  MeasurementAPIClient.h
gps/android/location_api/: BatchingAPIClient.cpp  BatchingAPIClient.h  GeofenceAPIClient.cpp  GeofenceAPIClient.h  GnssAPIClient.cpp  GnssAPIClient.h  LocationUtil.cpp  LocationUtil.h  MeasurementAPIClient.cpp  MeasurementAPIClient.h
gps/android/measurement_corrections/1.0/: MeasurementCorrections.h
gps/android/utils/: Android.mk  battery_listener.cpp  battery_listener.h
gps/android/visibility_control/1.0/: GnssVisibilityControl.cpp
gps/batching/: Android.mk  BatchingAdapter.h  Makefile.am  location_batching.cpp
gps/core/: Android.mk  ContextBase.cpp  ContextBase.h  EngineHubProxyBase.h  LBSProxyBase.h  LocAdapterBase.cpp  LocAdapterBase.h  LocAdapterProxyBase.h  LocApiBase.cpp  LocApiBase.h  LocContext.cpp  LocContext.h  LocDualContext.cpp  LocDualContext.h  Makefile.am  SystemStatus.cpp  SystemStatus.h  SystemStatusOsObserver.cpp  SystemStatusOsObserver.h  UlpProxyBase.h  configure.ac  fused_location_extended.h  gps_extended.h  gps_extended_c.h  loc_core_log.cpp  loc_core_log.h
gps/core/data-items/: DataItemConcreteTypesBase.h  DataItemId.h  DataItemsFactoryProxy.cpp  IDataItemCore.h
gps/core/data-items/common/: ClientIndex.cpp  ClientIndex.h  DataItemIndex.cpp  DataItemIndex.h  IClientIndex.h  IDataItemIndex.h  IndexFactory.cpp  IndexFactory.h
gps/core/observer/: IDataItemObserver.h  IDataItemSubscription.h  IFrameworkActionReq.h  IOsObserver.h
gps/etc/: Android.mk  flp.conf  gps.conf  izat.conf  sap.conf
gps/geofence/: Android.mk  GeofenceAdapter.h  configure.ac  location-geofence.pc.in
gps/gnss/: Agps.cpp  Agps.h  Android.mk  GnssAdapter.cpp  GnssAdapter.h  Makefile.am  XtraSystemStatusObserver.cpp  XtraSystemStatusObserver.h  location_gnss.cpp
gps/gnsspps/: Android.mk  Makefile.am  configure.ac  gnsspps.c  gnsspps.h  gnsspps.pc.in  timepps.h
gps/loc_api/: Android.mk  Makefile.am
gps/loc_api/ds_api/: Android.mk  ds_client.c  ds_client.h
gps/loc_api/libloc_api_50001/: Android.mk  LocEngAdapter.cpp  LocEngAdapter.h  Makefile.am  loc.cpp  loc.h  loc_eng.cpp  loc_eng.h  loc_eng_agps.cpp  loc_eng_agps.h  loc_eng_dmn_conn.cpp  loc_eng_dmn_conn_glue_msg.c  loc_eng_dmn_conn_glue_pipe.c  loc_eng_dmn_conn_handler.cpp  loc_eng_dmn_conn_thread_helper.c  loc_eng_msg.h  loc_eng_ni.cpp  loc_eng_nmea.cpp  loc_eng_xtra.cpp
gps/loc_api/loc_api_v02/: Android.mk  LocApiV02.cpp  LocApiV02.h  loc_api_sync_req.c  loc_api_sync_req.h  loc_api_v02_client.c  loc_api_v02_client.h  loc_api_v02_log.c  loc_util_log.h  location_service_v02.c  location_service_v02.h
gps/location/: Android.mk  ILocationAPI.h  LocationAPI.cpp  LocationAPI.h  LocationAPIClientBase.cpp  LocationAPIClientBase.h  LocationDataTypes.h  Makefile.am  configure.ac  location_interface.h
gps/pla/: Android.mk
gps/pla/android/: loc_pla.h
gps/utils/: Android.mk  LocIpc.cpp  LocIpc.h  LocThread.cpp  LocTimer.cpp  LocTimer.h  Makefile.am  MsgTask.cpp  configure.ac  gps-utils.pc.in  gps_extended.h  gps_extended_c.h  linked_list.c  loc_cfg.cpp  loc_cfg.h  loc_gps.h  loc_log.cpp  loc_misc_utils.cpp  loc_misc_utils.h  loc_nmea.cpp  loc_nmea.h  loc_target.cpp  loc_target.h  loc_timer.h  log_util.h  msg_q.c  msg_q.h
gps/utils/platform_lib_abstractions/: elapsed_millis_since_boot.cpp
(+1331 files in other folders)
